--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
 
     .main-information p{
-      font-weight:  200;
+      font-weight:  400;
       margin-top: 20px;
       color: hsl(212, 6%, 44%);
       width: 100%
@@ -54,14 +54,17 @@
 
     .header-light{
       font-weight: 200;
+      font-size: 40.5px;
       color: hsl(212, 6%, 44%);
       width: 100%;
+
     }
 
     .header-bold{
       font-weight: 600;
-      font-size: 33.5px;
+      font-size: 42px;
       width: 100%;
+      color: hsl(212, 6%, 44%);
     }
 
     .cards{
@@ -69,7 +72,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      margin-top: 50px;
+      margin-top: 60px;
       gap: 30px;
 
     }
