--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       align-items: center;
       text-align: center;
       min-height: 100vh;
-      background-color: rgb(248,248,248); 
+      background-color: white;
     }
 
     .main {
@@ -83,7 +83,7 @@
       padding: 25px;
       position: relative;
       border-radius: 10px;
-      box-shadow: 0 6px 15px -2px hsl(234, 21%, 64%);
+      box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
 
     }
 
@@ -166,6 +166,7 @@
       .header-bold {
         font-size: 21px;
       }
+
 
     }
 
